added field to toggle grid labels